--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,3 +25,10 @@
     font-weight: bold;
     font-size: 25px;
 }
+
+@media (min-width: 600px) {
+    .container {
+    display: flex;
+    justify-content:space-around ;
+}
+}
